# rag_template

./: .gitignore  CLAUDE.md  LICENSE  README.md  benchmark.sh  check_vectors.py  ingest_docs.py  initialize_models.py  pyproject.toml  pytest.ini  settings-test.yaml  settings.yaml  setup_all.py  simple_test.sh
rag_bench/: dependency_injection.py  main.py
rag_bench/components/: embedding_component.py  llm_component.py  vector_store_component.py
rag_bench/core/: document_processors.py  engine.py  query_enhancers.py  types.py
rag_bench/db/: base.py
rag_bench/evaluation/: benchmark.py  metrics.py  run_benchmark.py
rag_bench/evaluation/sample_data/: benchmark_config.json  general_knowledge_questions.json
rag_bench/models/: document.py
rag_bench/routers/api_v1/chat/: __init__.py  chat_router.py  chat_service.py  types.py
rag_bench/settings/: settings.py  settings_loader.py
rag_bench/workflows/: ingest.py
static/: index.html
tests/: conftest.py
tests/integration/: test_api_endpoints.py  test_rag_engine.py
tests/unit/: test_chat_service.py  test_components.py  test_document_processors.py  test_query_enhancers.py
