[tool.poetry]
name = "rag-bench"
version = "0.1.0"
description = "Generalized RAG system"
authors = ["You"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
fastapi = "^0.111.0"
uvicorn = "^0.28.0"
langchain = "^0.2.0"
langchain-openai = {version = "^0.1.0", extras = ["openai"]}
langchain-anthropic = "^0.1.2"
langchain-community = "^0.2.0"  # Added this dependency
openai = "^1.14.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
tiktoken = "^0.7.0"
tenacity = "^8.2.3"
injector = "^0.21.0"
llama-index-core = "^0.10.15"
llama-index-vector-stores-postgres = "^0.1.6"
pandas = "^2.2.0"
llama-index-llms-openai = "^0.1.7"
nltk = "^3.8.1"
bs4 = "^0.0.2"
sentence-transformers = "^2.3.1"
llama-cpp-python = "^0.2.56"
pgvector = "^0.2.4"
requests = "^2.31.0"
tqdm = "^4.66.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
