[tool.poetry]
name = "rag-bench"
version = "0.1.0"
description = "Generalized RAG system"
authors = ["You"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
# Web framework
fastapi = "^0.115.0"
uvicorn = "^0.32.0"

# LangChain ecosystem (updated to 0.3.x series for stability)
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-anthropic = "^0.2.0"
langchain-community = "^0.3.0"

# LLM providers
openai = "^1.50.0"
anthropic = "^0.40.0"

# Database
psycopg2-binary = "^2.9.9"
pgvector = "^0.3.0"

# Data validation
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"

# Utilities
tiktoken = "^0.8.0"
tenacity = "^9.0.0"
injector = "^0.22.0"
requests = "^2.32.0"
tqdm = "^4.67.0"

# LlamaIndex (for additional vector store support)
llama-index-core = "^0.12.0"
llama-index-vector-stores-postgres = "^0.3.0"
llama-index-llms-openai = "^0.3.0"

# NLP and embeddings
nltk = "^3.9.0"
bs4 = "^0.0.2"
sentence-transformers = "^3.3.0"
pandas = "^2.2.0"

# Local LLM support
llama-cpp-python = "^0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.0"
ruff = "^0.8.0"
freezegun = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
